# WechatMonet

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: main.yml
module/: customize.sh  module.prop  service.sh
src/main/cpp/: CMakeLists.txt  WechatMonetModule.cpp
src/main/cpp/include/zygisk/: api.hpp
src/main/java/com/wechat/monet/injector/: Bridge.java
